// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`implementation AND YET here is another 1`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-29T20:11-04:00",
  "currentFileTime": 132615222720599900,
  "dayOfTheWeek": "Monday",
  "isDayLightSavingsTime": true,
  "ordinalDate": "2021-88",
  "serviceResponse": null,
  "timeZoneName": "Eastern Standard Time",
  "utcOffset": "-04:00:00",
}
`;

exports[`implementation AND YET here is another 2`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-29T20:11-04:00",
  "currentFileTime": 132615222722786300,
  "dayOfTheWeek": "Monday",
  "isDayLightSavingsTime": true,
  "ordinalDate": "2021-88",
  "serviceResponse": null,
  "timeZoneName": "Eastern Standard Time",
  "utcOffset": "-04:00:00",
}
`;

exports[`implementation AND here is another 1`] = `
Object {
  "completed": false,
  "id": 1,
  "title": "delectus aut autem",
  "userId": 1,
}
`;

exports[`implementation Hi here is another 1`] = `
Object {
  "completed": false,
  "id": 1,
  "title": "delectus aut autem",
  "userId": 1,
}
`;

exports[`implementation should not allow external requests in CI 1`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-30T00:11Z",
  "currentFileTime": 132615366714817520,
  "dayOfTheWeek": "Tuesday",
  "isDayLightSavingsTime": false,
  "ordinalDate": "2021-89",
  "serviceResponse": null,
  "timeZoneName": "UTC",
  "utcOffset": "00:00:00",
}
`;
